2025-06-20_generali_openshift/lab0/kubernetes/04_01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  revisionHistoryLimit: 0
  replicas: 10
  strategy:
    # type: RollingUpdate
    type: Recreate
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        svc: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example-okd
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
