2025-06-20_generali_openshift/lab0/kubernetes/13_secret_example.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-example
spec:
  volumes:
    - name: config
      configMap:
        name: my-config
    - name: secret
      secret:
        secretName: my-secret
  containers:
    - name: main
      image: ghcr.io/sikalabs/slu:v0.88.0
      command: ["slu", "serve-files"]
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: secret
          subPath: password
          mountPath: /foo/password.txt
        - name: secret
          subPath: tokenFromString
          mountPath: /foo/tokenFromString.txt

        - name: config
          subPath: config
          mountPath: /foo/config.txt
        - name: config
          subPath: hello.html
          mountPath: /foo/hello.html
        - name: config
          subPath: config.yaml
          mountPath: /foo/config.yaml.txt

        - name: config
          mountPath: /foo/configmap
        - name: secret
          mountPath: /foo/secret
      resources:
        requests:
          memory: 50Mi
          cpu: 50m
        limits:
          memory: 100Mi
          cpu: 100m
