2025-06-20_generali_openshift/lab0/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  revisionHistoryLimit: 0
  replicas: 30
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
        svc: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example-okd
          ports:
            - name: http
              containerPort: 8000
            - name: metrics
              containerPort: 8001
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
          startupProbe:
            httpGet:
              path: /readyz
              port: 8000
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
