2025-06-20_generali_openshift/lab0/kubernetes/pod_okd.yml
apiVersion: v1
kind: Pod
metadata:
  name: example-okd
  labels:
    svc: example-okd
spec:
  containers:
    - name: main
      image: ondrejsika/training-example-okd
      ports:
        - containerPort: 8000
      resources:
        requests:
          memory: 10Mi
          cpu: 1m
        limits:
          memory: 20Mi
          cpu: 20m
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
