2025-06-20_generali_openshift/lab0/kubernetes/05_clusterip_service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-clusterip
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 8080
      targetPort: 8001
