2025-06-20_generali_openshift/lab0/kubernetes/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: example
  ports:
    - port: 80
      targetPort: 8000
