2025-06-20_generali_openshift/lab0/kubernetes/pvc_mount_example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-mount-example
spec:
  selector:
    matchLabels:
      app: pvc-mount-example
  template:
    metadata:
      labels:
        app: pvc-mount-example
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: default-pvc
      containers:
        - name: nginx
          image: ghcr.io/sikalabs/slu:v0.88.0
          workdir: /usr/share/nginx/html
          command:
            - slu
            - serve
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: pvc-mount-example
spec:
  type: ClusterIP
  selector:
    app: pvc-mount-example
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
