2025-06-20_generali_openshift/lab0/kubernetes/ingress-okd-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okd
spec:
  ingressClassName: openshift-default
  rules:
    - host: ondrej.apps.training.germanywestcentral.aroapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-clusterip
                port:
                  number: 80
