2025-06-20_generali_openshift/lab0/kubernetes/ingress-okd-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: openshift-default
  tls:
    - secretName: ondrej.openshift.sikademo.com-tls
      hosts:
        - ondrej.openshift.sikademo.com
  rules:
    - host: ondrej.openshift.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-clusterip
                port:
                  number: 80
